# tales-of-1001-data

./: README.md  environment.yaml  python_and_sql_in_5_minutes.ipynb
beergarden_happiness_with_python/: README.md  README.txt  beergarden_happiness_map.html  beergarden_happiness_with_python.ipynb
child-mortality/: README.md  beating_child_mortality.ipynb  pyproject.toml
graph-theory/: GraphTheoryAndNetworkX-Part1.ipynb  GraphTheoryAndNetworkX-Part2.ipynb  GraphTheoryAndNetworkX-Part3.ipynb
the-story-of-the-ugly-duckling/: Readme.md  The_story_of_the_ugly_duckling.ipynb  the-tale-of-the-ugly-duckling.ipynb
timeseries-interpolation-in-spark/: interpolating_time_series_p1_pandas.ipynb  interpolating_timeseries_p2_pyspark.ipynb
