[tool.poetry]
name = "beating-child-mortality"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
bokeh = "^2.0.2"
ipywidgets = "^7.5.1"
numpy = "^1.18.4"
pandas_flavor = "^0.2.0"
wget = "^3.2"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupytext = "^1.4.2"
jupyter_contrib_nbextensions = "^0.5.1"
autopep8 = "^1.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
